tests/fail/nightly/missing_trait_regex.stderr
error[E0277]: the trait bound `Vec<usize>: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:10:33
   |
10 |     sscanf::sscanf!("hi", "{}", std::vec::Vec<usize>);
   |                                 ^^^^^^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `Vec<usize>`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:11:33
   |
11 |     sscanf::sscanf!("hi", "{}", NoRegex);
   |                                 ^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others

error[E0277]: the trait bound `&[u8]: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:19:47
   |
19 | struct TestMapParamNoScanf(#[sscanf(map = |x: &[u8]| { x[0] })] u8);
   |                                               ^^^^^ the trait `RegexRepresentation` is not implemented for `&[u8]`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others

error[E0277]: the trait bound `Vec<usize>: FromStr` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:10:33
   |
10 |     sscanf::sscanf!("hi", "{}", std::vec::Vec<usize>);
   |                                 ^^^^^^^^^^^^^^^^^^^^ the trait `FromStr` is not implemented for `Vec<usize>`
   |
   = help: the following other types implement trait `FromStr`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `Vec<usize>` to implement `FromScanf<'_>`

error[E0277]: the trait bound `&[u8]: FromStr` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:19:47
   |
19 | struct TestMapParamNoScanf(#[sscanf(map = |x: &[u8]| { x[0] })] u8);
   |                                               ^^^^^ the trait `FromStr` is not implemented for `&[u8]`
   |
   = help: the following other types implement trait `FromStr`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `&[u8]` to implement `FromScanf<'_>`

error[E0277]: the trait bound `&[u8]: FromStr` is not satisfied in `FromStrFailedError<&[u8]>`
  --> tests/fail/nightly/missing_trait_regex.rs:17:26
   |
17 | #[derive(sscanf::FromScanf)]
   |                          ^ within `FromStrFailedError<&[u8]>`, the trait `FromStr` is not implemented for `&[u8]`
   |
   = help: the following other types implement trait `FromStr`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required because it appears within the type `FromStrFailedError<&[u8]>`
  --> src/errors.rs
   |
   | pub struct FromStrFailedError<T: FromStr>
   |            ^^^^^^^^^^^^^^^^^^
note: required by a bound in `Result`
  --> $RUST/core/src/result.rs
   = note: this error originates in the derive macro `sscanf::FromScanf` (in Nightly builds, run with -Z macro-backtrace for more info)
